fix(test): keep source page test Java 17 compatible